--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
         <body>
             <div id = "calculator">
                 <div id = "screen">screen</div>
-                <div class = "button">1</div>
-                <div class = "button">2</div>
-                <div class = "button">3</div>
-                <div class = "button">4</div>
-                <div class = "button">5</div>
-                <div class = "button">6</div>
-                <div class = "button">7</div>
-                <div class = "button">8</div>
-                <div class = "button">9</div>
-                <div class = "button">+</div>
-                <div class = "button">-</div>
-                <div class = "button">=</div>
-                <div class = "button">*</div>
-                <div class = "button">.</div>
-                <div class = "button">%</div>
-                <div class = "button">C</div>
+                <div id = "buttonBody">
+                    <div class = "button">C</div>
+                    <div class = "button">+/-</div>
+                    <div class = "button">%</div>
+                    <div class = "button">*</div>
+                    <div class = "button">7</div>
+                    <div class = "button">8</div>
+                    <div class = "button">9</div>
+                    <div class = "button">-</div>
+                    <div class = "button">4</div>
+                    <div class = "button">5</div>
+                    <div class = "button">6</div>
+                    <div class = "button">+</div>
+                    <div class = "button">1</div>
+                    <div class = "button">2</div>
+                    <div class = "button">3</div>
+                    <div class = "button">=</div>
+                </div>
+                
             </div>
         </body>
     </html>
