--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
     <html>
         <head> 
             <link rel = "stylesheet" href = "style.css"> 
+            
         </head>
         <body>
             <div id = "calculator">
-                <div id = "screen">screen</div>
+                <div id = "screen">scredddddddddddddddddddddddddddddddden</div>
                 <div id = "buttonBody">
-                    <div class = "button">C</div>
-                    <div class = "button">+/-</div>
-                    <div class = "button">%</div>
-                    <div class = "button">*</div>
-                    <div class = "button">7</div>
-                    <div class = "button">8</div>
-                    <div class = "button">9</div>
-                    <div class = "button">-</div>
-                    <div class = "button">4</div>
-                    <div class = "button">5</div>
-                    <div class = "button">6</div>
-                    <div class = "button">+</div>
-                    <div class = "button">1</div>
-                    <div class = "button">2</div>
-                    <div class = "button">3</div>
-                    <div class = "button">=</div>
+                    <div id = "clear" class = "button">C</div>
+                    <div id = "positiveNegative" class = "button">+/-</div>
+                    <div id = "divide" class = "button">%</div>
+                    <div id = "multiply" class = "button">*</div>
+                    <div id = "7" class = "button">7</div>
+                    <div id = "8" class = "button">8</div>
+                    <div id = "9" class = "button">9</div>
+                    <div id = "subtract" class = "button">-</div>
+                    <div id = "4" class = "button">4</div>
+                    <div id = "5" class = "button">5</div>
+                    <div id = "6" class = "button">6</div>
+                    <div id = "add" class = "button">+</div>
+                    <div id = "1" class = "button">1</div>
+                    <div id = "2" class = "button">2</div>
+                    <div id = "3" class = "button">3</div>
+                    <div id = "equal" class = "button">=</div>
                 </div>
-                
             </div>
+            <script src="script.js"></script>
         </body>
     </html>
