Changed screen text holder.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
     <html>
         <head> 
             <link rel = "stylesheet" href = "style.css"> 
-            
         </head>
         <body>
             <div id = "calculator">
-                <div id = "screen">scredddddddddddddddddddddddddddddddden</div>
+                <div id = "screen">4+4</div>
                 <div id = "buttonBody">
                     <div id = "clear" class = "button">C</div>
                     <div id = "positiveNegative" class = "button">+/-</div>
