--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-    <html>
+    <html lang = "en">
         <head> 
+            <title>HTML Calculator Project</title>
             <link rel = "stylesheet" href = "style.css"> 
         </head>
         <body>
