Removed screen text holder.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </head>
         <body>
             <div id = "calculator">
-                <div id = "screen">4+4</div>
+                <div id = "screen"></div>
                 <div id = "buttonBody">
                     <div id = "clear" class = "button">C</div>
                     <div id = "positiveNegative" class = "button">+/-</div>
