Added new div screen to track previous operation.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         </head>
         <body>
             <div id = "calculator">
-                <div id = "screen"></div>
+                <div id = "screen">
+                    <div id = "history">dd</div>
+                    <div id = "textScreen"></div>
+                </div>
                 <div id = "buttonBody">
                     <div id = "clear" class = "button">C</div>
                     <div id = "positiveNegative" class = "button">+/-</div>
