Removed placeholder text in history div.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div id = "calculator">
                 <div id = "screen">
-                    <div id = "history">dd</div>
+                    <div id = "history"></div>
                     <div id = "textScreen"></div>
                 </div>
                 <div id = "buttonBody">
